--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
   <script src="js/vendor/jquery.js"></script>
   <script src="js/panel.js"></script>
 
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-46753039-1', 'shiraandavi.com');
+    ga('require', 'linkid', 'linkid.js');
+    ga('send', 'pageview');
+  </script>
+
 </head>
 
 <body>
@@ -86,30 +97,37 @@
         <p>We’ve reserved room blocks at two area hotels.</p>
         <table>
           <tr>
+            <td class="row-name"></td>
             <td class="hotel-names hotel-courtyard">Courtyard Marriott Chicago Highland Park/Northbrook</td>
             <td class="hotel-names hotel-embassy">Embassy Suites Chicago-North Shore Deerfield</td>
           </tr>
           <tr>
+            <td class="row-name">Address:</td>
             <td class="courtyard">1505 Lake Cook Road, Highland Park, IL 60035</td>
             <td class="embassy">1445 Lake Cook Road, Deerfield, Illinois, 60015</td>
           </tr>
           <tr>
+            <td class="row-name">Distance:</td>
             <td class="courtyard">3.0 miles (~7 mins) drive to synagogue</td>
             <td class="embassy">6.5 miles (~14 mins) drive to synagogue</td>
           </tr>
           <tr>
-            <td class="courtyard">King bed = $99/night</td>
+            <td class="row-name">Option 1:</td>
+            <td class="courtyard">King bed + sleeper sofa = $99/night</td>
             <td class="embassy">King bed + pull-out sofa = $109/night</td>
           </tr>
           <tr>
+            <td class="row-name">Option 2:</td>
             <td class="courtyard">2 queen beds = $109/night</td>
             <td class="embassy">2 double beds + pull-out sofa = $129/night</td>
           </tr>
           <tr>
+            <td class="row-name">Reserve by:</td>
             <td class="courtyard">Reserve by July 18, 2014 to receive group rate for "Kurtz-Kaufman Wedding"</td>
             <td class="embassy">Reserve by by July 11, 2014 to receive group rate</td>
           </tr>
           <tr>
+            <td class="row-name">Reservation links:</td>
             <td class="courtyard">
               <a href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Kurtz-Kaufman%20Wedding%5ECHIHP%60KKWKKWA%7CKKWKKWB%6099-109%60USD%60false%608/8/14%608/11/14%6007/18/2014&app=resvlink&stop_mobi=yes" target="_blank">
               Click here
@@ -119,6 +137,7 @@
             <td class="embassy">Booking link/information to follow</td>
           </tr>
           <tr>
+            <td class="row-name">Extras:</td>
             <td class="courtyard">Breakfast <b>not</b> included</td>
             <td class="embassy">Breakfast included 6am-9am (Mon-Fri) and 7:30am-10:30am (Sat-Sun)</td>
           </tr>
@@ -181,24 +200,30 @@
       <h4>Understanding Jewish Wedding Traditions</h4>
 
       <h5>Kabbalat Panim</h5>
-      <p>Shira will be sitting on a chair, symbolizing a thrown, as she begins her role as the “queen” for the day. She will be surrounded by the mothers, grandmothers, sisters, and bridemaids. It is customary for guests to greet Shira and rejoice with her.</p>
+      <p>Shira will be sitting on a chair, symbolizing a throne, as she begins her role as the “queen” for the day. She will be surrounded by the mothers, grandmothers, sisters, and bridemaids. It is customary for guests to greet Shira and rejoice with her.</p>
+      <hr>
 
       <h5>Tisch</h5>
       <p>Avi, the “king” will command his own room where he will be surrounded by the fathers, brothers, and other friends. During this time some important legal and ritual documents will be signed.</p>
 
       <p>Everyone is encouraged to walk between the two rooms to greet both Shira and Avi. Appetizers will be served during this time.</p>
+      <hr>
 
       <h5>Bedeken</h5>
       <p>At the conclusion of Avi’s tisch, he will be escorted - to the sound of festive music - by the fathers, family, and friends to see Shira. People are encouraged to join in the singing and dancing. Avi performs the bedeken - he “checks” to confirm that the bride is Shira and then will cover her face with her veil. It is also customary for Shira to receive blessings from the fathers at this time.</p>
+      <hr>
 
       <h5>Chuppah</h5>
       <p>The guests will then find their way to the synagogue’s sanctuary for the ceremony. Shira and Avi will be married under a chuppah, which symbolizes the home they will build together. It is open on all four sides to represent their open, welcoming, and hospitable home. The ceremony will be conducted by Shira’s father, Rabbi Vernon Kurtz.</p>
+      <hr>
 
       <h5>Yichud</h5>
       <p>At the conclusion of the ceremony (after Avi breaks the glass), Shira and Avi will leave the chuppah surrounded by friends and family who are singing and dancing to festive music. They are escorted to a private room where they will share their first moments together as a married couple.</p>
+      <hr>
 
       <h5>Simcha (Reception)</h5>
       <p>The guests are invited into the reception hall to begin their first course. After their private time together, Shira and Avi will join their guests in the hall for the celebration, beginning with traditional Jewish music and dancing (hora). It is a great mitzvah to dance before the bride and groom and entertain them. Shira and Avi will rejoice with their guests through dancing and partaking in the wedding feast.</p>
+      <hr>
 
       <h5>Mezinka</h5>
       <p>During the reception, Bryna and Vernon (Shira’s parents) and Carol and Joel (Avi’s parents) will take seats on the dance floor and will be presented with flower crowns by their children. They will be honored in this traditional way for marrying off their last children. Family and friends will circle them with dance and people are encouraged to give each one a kiss and wish them a mazel tov.</p>
@@ -219,23 +244,23 @@
       <p>We're in the process of setting up and filling out the registries.</p>
       <table>
         <tr>
-          <td class="subheader">Registry link</td>
-          <td class="subheader">Notes</td>
+          <td class="subheader">Registry</td>
+          <td class="subheader"></td>
         </tr>
         <tr>
-          <td class="bbb"><a href="http://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?registryId=11015818&eventType=Wedding" target="_blank">Bed Bath & Beyond</a></td>
-          <td class="bbb" width="100px">Registry number: 11015818</td>
-          <td class="bbb" width="150px">If you have coupons, you can go into the store and order through the registry there. </td>
+          <td class="bbb">Bed Bath & Beyond <br>
+            <a href="http://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?registryId=11015818&eventType=Wedding" target="_blank">Click here to go to registry</a></td>
+          <td class="bbb" width="200px">If you have coupons, you can go into the store and order there. Registry id: 11015818</td>
         </tr>
+
         <tr>
-          <td class="macys">Macy's</td>
-          <td class="macys"></td>
-          <td class="macys">(under contruction)</td>
+          <td class="macys">Macy's <br>
+            <a href="http://www1.macys.com/registry/wedding/guest/?registryId=6071255" target="_blank">Click here to go to registry</a></td>
+          <td class="macys"Registry id: 6071255</td>
         </tr>
         <tr>
           <td class="crate">Crate and Barrel</td>
-          <td class="crate"></td>
-          <td class="crate">(under contruction)</td>
+          <td class="crate">Coming soon...</td>
         </tr>
       </table>
       <a class='close' href='#'>Close</a>
