--- a/story.html
+++ b/story.html
@@ -9,8 +9,17 @@
 
   <link href='http://fonts.googleapis.com/css?family=Peralta' rel='stylesheet' type='text/css'>
 
-  <!-- TODO update style sheet -->
   <link href="css/our-story-styles.css" rel="stylesheet" />
+
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-46753039-1', 'shiraandavi.com');
+    ga('send', 'pageview');
+  </script>
 
 </head>
 
@@ -121,7 +130,6 @@ if ("ontouchstart" in document.documentElement) {
 
 <script src="js/vendor/impress.js"></script>
 <script>impress().init();</script>
-
 
 </body>
 </html>
