adds amazon link

--- a/index.html
+++ b/index.html
@@ -254,13 +254,16 @@
         </tr>
 
         <tr>
+          <td class="crate">Amazon <br>
+            <a href="http://www.amazon.com/registry/wedding/SI4F8MQV0DCL" target="_blank">Click here to go to registry</a>
+          </td>
+          <td class="crate"></td>
+        </tr>
+
+        <tr>
           <td class="macys">Macy's <br>
             <a href="http://www1.macys.com/registry/wedding/guest/?registryId=6071255" target="_blank">Click here to go to registry</a></td>
           <td class="macys"Registry id: 6071255</td>
-        </tr>
-        <tr>
-          <td class="crate">Crate and Barrel</td>
-          <td class="crate">Coming soon...</td>
         </tr>
       </table>
       <a class='close' href='#'>Close</a>
