--- a/index.html
+++ b/index.html
@@ -134,7 +134,10 @@
               </a>
               or call 1-800-228-9290
             </td>
-            <td class="embassy">Booking link/information to follow</td>
+            <td class="embassy">
+              <a href="http://embassysuites.hilton.com/en/es/groups/personalized/D/DEFILES-KKW-20140803/index.jhtml" target="_blank">Click Here</a>
+            or call 1-800-362-2779 (800-EMBASSY) and use group code <strong>KKW</strong>
+            </td>
           </tr>
           <tr>
             <td class="row-name">Extras:</td>
