--- a/game.html
+++ b/game.html
@@ -97,7 +97,7 @@
       <div class="question small-centered">
         <h6>On which very practical subject did Avi write his college thesis?</h6>
         <ol class="choices" id="college-thesis">
-          <span class="result" data-y="Correct! (It was the only one that existed.)"></span>
+          <span class="result" data-y="Correct! (It's the only one that exists.)"></span>
           <li class="choice y"><a href="#">Roman cities</a></li>
           <li class="choice n"><a href="#">Business ethics</a></li>
           <li class="choice n"><a href="#">Military intelligence</a></li>
