--- a/index.html
+++ b/index.html
@@ -384,29 +384,34 @@
     <div id="registry-html">
       <a class='close' href='#'>Close</a>
       <h2>Where we're registered</h2>
-      <p>We're in the process of setting up and filling out the registries.</p>
       <table>
         <tr>
           <td class="subheader">Registry</td>
           <td class="subheader"></td>
         </tr>
         <tr>
+          <td class="crate">Crate & Barrel <br>
+            <a href="http://www.crateandbarrel.com/Gift-Registry/Shira-Kurtz-and-Avi-Kaufman/r5163742" target="_blank">Click here to go to registry</a></td>
+          <td class="crate">Kitchen tools, serving platters, linens.</td>
+        </tr>
+
+        <tr>
           <td class="bbb">Bed Bath & Beyond <br>
             <a href="http://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?registryId=11015818&eventType=Wedding" target="_blank">Click here to go to registry</a></td>
-          <td class="bbb" width="200px">If you have coupons, you can go into the store and order there. Registry id: 11015818</td>
+          <td class="bbb" width="200px">Baking, dinnerware, towels, barware, kitchen electronics. Registry id: 11015818</td>
         </tr>
 
         <tr>
           <td class="crate">Amazon <br>
             <a href="http://www.amazon.com/registry/wedding/SI4F8MQV0DCL" target="_blank">Click here to go to registry</a>
           </td>
-          <td class="crate"></td>
+          <td class="crate">Pots, pans, knives</td>
         </tr>
 
         <tr>
           <td class="macys">Macy's <br>
             <a href="http://www1.macys.com/registry/wedding/guest/?registryId=6071255" target="_blank">Click here to go to registry</a></td>
-          <td class="macys"Registry id: 6071255</td>
+          <td class="macys">China, silverware, glasses, bedding. Registry id: 6071255</td>
         </tr>
       </table>
       <a class='close' href='#'>Close</a>
