--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <li><a id="our-story" href="story.html">How we met</a><br></li>
         <li><a id="proposal-video" href="#">The Proposal</a><br></li>
         <li><a id="game" href="game.html">Trivia about us!</a><br></li>
+        <li><a id="faq" href="#">FAQ</a><br></li>
         <li><a id="contact-us" href="#">Contact us</a><br></li>
       </ul>
     </div>
@@ -101,6 +102,31 @@
       <h1>Contact us</h1>
       <p>We'd love to hear from you!</p>
       <p>Email us at <span class="email">wedding@ShiraAndAvi.com</span></p>
+      <a class='close' href='#'>Close</a>
+    </div>
+
+    <div id="faq-html">
+      <a class='close' href='#'>Close</a>
+      <h3>Frequently Asked Questions</h3>
+
+       <h5>Q: What time should I arrive at the wedding?</h5>
+       <p>
+        Events will begin promptly at noon. We recommend arriving by then to ensure that you don’t miss any of the fun.
+       </p>
+
+       <hr>
+       <h5>Q: I see the choices fish and vegetarian on my reply card. What will you be serving?</h5>
+       <p>
+         The fish will be a miso glazed salmon and the vegetarian dish will be mushroom and spinach ravioli. No meat is being served and all food will be fish, vegetarian, or dairy. Please let us know if you have any specific food
+         restrictions. Save room for dessert :-)
+       </p>
+
+      <hr>
+       <h5>Q: Can I fly in and out of Chicago on the day of the wedding?</h5>
+       <p>
+         We planned the wedding for noon to allow people to travel on that day. Since Chicago is in the central time zone, flying in on Sunday morning will give you an extra hour. We expect the wedding to end at 6pm, so you can easily make an 8:30pm flight that night, but we wouldn’t recommend booking anything earlier than that.
+       </p>
+
       <a class='close' href='#'>Close</a>
     </div>
 
