--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
       <h5>Main course options:</h5>
       <h6>Fish: Miso glazed salmon</h6>
-      <h6>Vegetarian: Mushroom and spinach raviolli</h6>
+      <h6>Vegetarian: Mushroom and spinach ravioli</h6>
 
       <hr>
       <p><b>North Suburban Synagogue Beth El <br>
@@ -130,7 +130,7 @@
       <hr>
        <h5>Q: Can I fly in and out of Chicago on the day of the wedding?</h5>
        <p>
-         We planned the wedding for noon to allow people to travel on that day. Since Chicago is in the central time zone, flying in on Sunday morning will give you an extra hour. We expect the wedding to end at 6pm, so you can easily make an 8:30pm flight that night, but we wouldn’t recommend booking anything earlier than that.
+         Yes. We expect the wedding to end at 6pm, so you can easily make an 8:30pm flight that night, but we wouldn’t recommend booking anything earlier than that.
        </p>
 
       <a class='close' href='#'>Close</a>
@@ -230,7 +230,7 @@
           between downtown Chicago and Highland Park. Get on at Ogilvie Transportation
           Center (buy tickets in station to avoid surcharge), and get off at
           Ravinia (not <i>Ravinia Park</i>). The ride is approximately 45 minutes
-          on a Sunday morning, and one-way ticket costs $5.25. Ravinia station is
+          on a Sunday morning, and a one-way ticket costs $5.25. Ravinia station is
           0.7 miles from the synagogue. Either walk, or contact us to arrange a ride.
         </p>
       <hr>
@@ -262,7 +262,7 @@
       <hr>
 
       <h5>Chuppah</h5>
-      <p>The guests will then find their way to the synagogue’s sanctuary for the ceremony. Shira and Avi will be married under a chuppah, which symbolizes the home they will build together. Their chuppah was created by Avi's mother, Carol Goodman Kaufman, and was used in both of his siblings's weddings. It is open on all four sides to represent their open, welcoming, and hospitable home. The ceremony will be conducted by Shira’s father, Rabbi Vernon Kurtz.</p>
+      <p>The guests will then find their way to the synagogue’s sanctuary for the ceremony. Shira and Avi will be married under a chuppah, which symbolizes the home they will build together. Their chuppah was created by Avi's mother, Carol Goodman Kaufman, and was used in both of his siblings' weddings. It is open on all four sides to represent their open, welcoming, and hospitable home. The ceremony will be conducted by Shira’s father, Rabbi Vernon Kurtz.</p>
       <hr>
 
       <h5>Yichud</h5>
