--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         <li><a id="jewish-guide" href="#">Guide to Jewish Wedding</a><br></li>
         <li><a id="chicago" href="#">What to do in Chicago</a><br></li>
         <li><a id="registry" href="#">Registry Information</a><br></li>
-        <li><a id="our-story" href="story.html" target="_blank">How we met</a><br></li>
+        <li><a id="our-story" href="story.html">How we met</a><br></li>
         <li><a id="proposal-video" href="#">The Proposal</a><br></li>
-        <li><a id="game" href="game.html" target="_blank">Trivia about us!</a><br></li>
+        <li><a id="game" href="game.html">Trivia about us!</a><br></li>
         <li><a id="faq" href="#">FAQ</a><br></li>
         <li><a id="contact-us" href="#">Contact us</a><br></li>
       </ul>
